# vcx-post-checkout

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FileTree.cpp  FileTree.hpp  GitRepo.cpp  GitRepo.hpp  Sln.cpp  Sln.hpp  Vcxproj.cpp  Vcxproj.hpp  fs.hpp  post-checkout.cpp  uuid.hpp
